RESOLVED FIXED162965
[SOUP] HostTLSCertificateSet should not use SHA-1 hashes to compare certificates
https://bugs.webkit.org/show_bug.cgi?id=162965
Summary [SOUP] HostTLSCertificateSet should not use SHA-1 hashes to compare certificates
Michael Catanzaro
Reported 2016-10-05 03:46:26 PDT
HostTLSCertificateSet should not use SHA-1 hashes to compare certificates
Attachments
Patch (2.26 KB, patch)
2016-10-05 13:52 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2016-10-05 13:52:09 PDT
WebKit Commit Bot
Comment 2 2016-10-05 23:41:44 PDT
Comment on attachment 290747 [details] Patch Clearing flags on attachment: 290747 Committed r206850: <http://trac.webkit.org/changeset/206850>
WebKit Commit Bot
Comment 3 2016-10-05 23:41:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.