[SOUP] HostTLSCertificateSet should not use SHA-1 hashes to compare certificates https://bugs.webkit.org/show_bug.cgi?id=162965

Reviewed by Carlos Garcia Campos.

Use SHA-256 instead.

No new tests, covered by TestSSL.

* platform/network/soup/SoupNetworkSession.cpp:
(WebCore::HostTLSCertificateSet::computeCertificateHash):


Canonical link: https://commits.webkit.org/180903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206850 268f45cc-cd09-0410-ab3c-d52691b4dbfc